Update Composer dependencies

--- a/lang/ro.json
+++ b/lang/ro.json
@@ -10,7 +10,7 @@
     "Action": "Acțiune",
     "Actions": "Acțiuni",
     "Add": "Adaugă",
-    "Add :name": "Adăugă :name",
+    "Add :name": "Adaugă :name",
     "Admin": "Admin",
     "Agree": "Aprobă",
     "All rights reserved.": "Toate drepturile rezervate.",
