Update Composer dependencies

--- a/lang/cs.json
+++ b/lang/cs.json
@@ -136,7 +136,7 @@
     "New": "Nový",
     "New :name": "Nové :name",
     "New Password": "Nové heslo",
-    "No": "Č",
+    "No": "Ne",
     "No Content": "Žádný obsah",
     "Non-Authoritative Information": "Neautoritativní informace",
     "Not Acceptable": "Nepřijatelné",
@@ -146,8 +146,8 @@
     "Not Modified": "Nezměněno",
     "of": "z",
     "OK": "Dobře",
-    "Once your account is deleted, all of its resources and data will be permanently deleted. Before deleting your account, please download any data or information that you wish to retain.": "Jakmile bude váš účet smazán, všechny jeho zdroje a data budou trvale smazány. Před smazáním účtu si prosím stáhněte všechna data nebo informace, které chcete zachovat.",
-    "Once your account is deleted, all of its resources and data will be permanently deleted. Please enter your password to confirm you would like to permanently delete your account.": "Jakmile bude váš účet smazán, budou trvale smazány všechny jeho zdroje a data. Zadejte prosím své heslo pro potvrzení, že chcete trvale smazat svůj účet.",
+    "Once your account is deleted, all of its resources and data will be permanently deleted. Before deleting your account, please download any data or information that you wish to retain.": "Jakmile bude váš účet smazán, všechny jeho položky a data budou trvale smazány. Před smazáním účtu si prosím stáhněte všechna data nebo informace, které chcete zachovat.",
+    "Once your account is deleted, all of its resources and data will be permanently deleted. Please enter your password to confirm you would like to permanently delete your account.": "Jakmile bude váš účet smazán, budou trvale smazány všechny jeho položky a data. Zadejte prosím své heslo pro potvrzení, že chcete trvale smazat svůj účet.",
     "Open": "OTEVŘENO",
     "Open in a current window": "Otevřít v aktuálním okně",
     "Open in a new window": "Otevřít v novém okně",
@@ -156,12 +156,12 @@
     "Open on the website": "Otevřít na webu",
     "Origin Is Unreachable": "Původ je nedosažitelný",
     "Page Expired": "Stránka vypršela",
-    "Pagination Navigation": "Stránkování Navigace",
+    "Pagination Navigation": "Stránkování navigace",
     "Partial Content": "Částečný obsah",
     "Password": "Heslo",
     "password": "Heslo je nesprávné.",
     "Payload Too Large": "Příliš velké užitečné zatížení",
-    "Payment Required": "platba vyžadována",
+    "Payment Required": "Platba vyžadována",
     "Permanent Redirect": "Trvalé přesměrování",
     "Please click the button below to verify your email address.": "Klepnutím na tlačítko níže ověřte svou e-mailovou adresu.",
     "Precondition Failed": "Předpoklad se nezdařil",
@@ -213,7 +213,7 @@
     "Start": "Start",
     "Stop": "Stop",
     "Submit": "Předložit",
-    "Subscribe": "předplatit",
+    "Subscribe": "Přihlásit se k odběru",
     "Switch": "Přepínač",
     "Switch To Role": "Přepnout do role",
     "Switching Protocols": "Přepínací protokoly",
@@ -226,7 +226,7 @@
     "The response is not a view.": "Odpověď není pohled.",
     "This action is unauthorized.": "Tato akce je neoprávněná.",
     "This is a secure area of the application. Please confirm your password before continuing.": "Jedná se o bezpečnou oblast aplikace. Před pokračováním potvrďte své heslo.",
-    "This password reset link will expire in :count minutes.": "Tento odkaz na obnovení hesla vyprší za :count minut.",
+    "This password reset link will expire in :count minutes.": "Platnost resetovacího odkazu je limitována v minutách (:count min).",
     "to": "na",
     "Toggle navigation": "Přepnout navigaci",
     "Too Early": "Příliš brzy",
@@ -243,7 +243,7 @@
     "Up": "Nahoru",
     "Update": "Aktualizace",
     "Update :name": "Aktualizace :name",
-    "Update Password": "Aktualizovat Heslo",
+    "Update Password": "Aktualizovat heslo",
     "Update your account's profile information and email address.": "Aktualizujte informace o profilu svého účtu a e-mailovou adresu.",
     "Upgrade Required": "Je vyžadován upgrade",
     "URI Too Long": "URI je příliš dlouhý",
