--- a/lang/cs.json
+++ b/lang/cs.json
@@ -110,6 +110,7 @@
     "Invalid filename.": "Neplatný název souboru.",
     "Invalid JSON was returned from the route.": "Z trasy byl vrácen neplatný JSON.",
     "Invalid SSL Certificate": "Neplatný certifikát SSL",
+    "length": "délka",
     "Length Required": "Požadovaná délka",
     "Like": "Jako",
     "Load": "Zatížení",
@@ -226,7 +227,7 @@
     "The response is not a view.": "Odpověď není pohled.",
     "This action is unauthorized.": "Tato akce je neoprávněná.",
     "This is a secure area of the application. Please confirm your password before continuing.": "Jedná se o bezpečnou oblast aplikace. Před pokračováním potvrďte své heslo.",
-    "This password reset link will expire in :count minutes.": "Platnost resetovacího odkazu je limitována v minutách (:count min).",
+    "This password reset link will expire in :count minutes.": "Tento odkaz pro obnovení hesla vyprší za :count minut.",
     "to": "na",
     "Toggle navigation": "Přepnout navigaci",
     "Too Early": "Příliš brzy",
