--- a/lang/da.json
+++ b/lang/da.json
@@ -110,6 +110,7 @@
     "Invalid filename.": "Ugyldigt filnavn.",
     "Invalid JSON was returned from the route.": "Ugyldig JSON blev returneret fra ruten.",
     "Invalid SSL Certificate": "Ugyldigt SSL-certifikat",
+    "length": "længde",
     "Length Required": "Længde påkrævet",
     "Like": "Synes godt om",
     "Load": "belastning",
