--- a/lang/el.json
+++ b/lang/el.json
@@ -110,6 +110,7 @@
     "Invalid filename.": "Μη έγκυρο όνομα αρχείου.",
     "Invalid JSON was returned from the route.": "Επιστράφηκε μη έγκυρο JSON από τη διαδρομή.",
     "Invalid SSL Certificate": "Μη έγκυρο πιστοποιητικό SSL",
+    "length": "Μήκος",
     "Length Required": "Απαιτούμενο μήκος",
     "Like": "Μου αρέσει",
     "Load": "Φόρτωση",
