--- a/lang/eo.json
+++ b/lang/eo.json
@@ -110,6 +110,7 @@
     "Invalid filename.": "Nevalida dosiernomo.",
     "Invalid JSON was returned from the route.": "Nevalida JSON estis resendita de la itinero.",
     "Invalid SSL Certificate": "Nevalida SSL-Atestilo",
+    "length": "longeco",
     "Length Required": "Longo Bezonata",
     "Like": "Ŝati",
     "Load": "Ŝarĝo",
