--- a/lang/es.json
+++ b/lang/es.json
@@ -110,6 +110,7 @@
     "Invalid filename.": "Nombre de archivo no válido.",
     "Invalid JSON was returned from the route.": "Se devolvió un JSON no válido desde la ruta.",
     "Invalid SSL Certificate": "Certificado SSL no válido",
+    "length": "longitud",
     "Length Required": "Longitud requerida",
     "Like": "Me gusta",
     "Load": "Cargar",
