--- a/lang/hi.json
+++ b/lang/hi.json
@@ -110,6 +110,7 @@
     "Invalid filename.": "अमान्य फ़ाइल नाम.",
     "Invalid JSON was returned from the route.": "अमान्य JSON मार्ग से लौटा दिया गया था.",
     "Invalid SSL Certificate": "अमान्य एसएसएल प्रमाणपत्र",
+    "length": "लंबाई",
     "Length Required": "लंबाई की आवश्यकता है",
     "Like": "पसंद",
     "Load": "भार",
