--- a/lang/id.json
+++ b/lang/id.json
@@ -110,6 +110,7 @@
     "Invalid filename.": "Nama file tidak valid.",
     "Invalid JSON was returned from the route.": "JSON yang tidak valid dikembalikan dari rute.",
     "Invalid SSL Certificate": "Sertifikat SSL tidak sah",
+    "length": "panjang",
     "Length Required": "Panjang diperlukan",
     "Like": "Menyukai",
     "Load": "Memuat",
