--- a/lang/it.json
+++ b/lang/it.json
@@ -110,6 +110,7 @@
     "Invalid filename.": "Nome file non valido.",
     "Invalid JSON was returned from the route.": "JSON non valido è stato restituito dalla route.",
     "Invalid SSL Certificate": "Certificato SSL invalido",
+    "length": "dimensione",
     "Length Required": "Lunghezza necessaria",
     "Like": "Mi Piace",
     "Load": "Carica",
