--- a/lang/ms.json
+++ b/lang/ms.json
@@ -110,6 +110,7 @@
     "Invalid filename.": "Nama fail tidak sah.",
     "Invalid JSON was returned from the route.": "JSON yang tidak sah telah dikembalikan daripada laluan.",
     "Invalid SSL Certificate": "Sijil SSL tidak sah",
+    "length": "panjang",
     "Length Required": "Panjang Diperlukan",
     "Like": "Suka",
     "Load": "Muatkan",
