--- a/lang/nl.json
+++ b/lang/nl.json
@@ -110,6 +110,7 @@
     "Invalid filename.": "Ongeldige bestandsnaam.",
     "Invalid JSON was returned from the route.": "Er is ongeldige JSON teruggekomen van de route.",
     "Invalid SSL Certificate": "Ongeldig SSL-certificaat",
+    "length": "lengte",
     "Length Required": "Lengte vereist",
     "Like": "Leuk vinden",
     "Load": "Laden",
