--- a/lang/pt_BR.json
+++ b/lang/pt_BR.json
@@ -110,6 +110,7 @@
     "Invalid filename.": "Nome de arquivo inválido.",
     "Invalid JSON was returned from the route.": "JSON inválido foi retornado da rota.",
     "Invalid SSL Certificate": "Certificado SSL Inválido",
+    "length": "comprimento",
     "Length Required": "Comprimento Necessário",
     "Like": "Como",
     "Load": "Carregar",
