--- a/lang/ro.json
+++ b/lang/ro.json
@@ -110,6 +110,7 @@
     "Invalid filename.": "Invalid filename.",
     "Invalid JSON was returned from the route.": "JSON nevalid a fost returnat de pe rută.",
     "Invalid SSL Certificate": "Certificat SSL nevalid",
+    "length": "length",
     "Length Required": "Lungimea necesară",
     "Like": "Îmi place",
     "Load": "Încarcă",
