--- a/lang/ru.json
+++ b/lang/ru.json
@@ -110,7 +110,8 @@
     "Invalid filename.": "Некорректное имя файла.",
     "Invalid JSON was returned from the route.": "Маршрут вернул некорректный JSON.",
     "Invalid SSL Certificate": "Недействительный SSL сертификат",
-    "Length Required": "Необходима длина",
+    "length": "длина",
+    "Length Required": "Объём содержимого не определён",
     "Like": "Нравится",
     "Load": "Загрузить",
     "Localize": "Локализовать",
@@ -140,10 +141,10 @@
     "No Content": "Содержимое отсутствует",
     "Non-Authoritative Information": "Информация не авторитетна",
     "Not Acceptable": "Неприемлемо",
-    "Not Extended": "Не расширено",
+    "Not Extended": "Отсутствует расширение",
     "Not Found": "Не найдено",
     "Not Implemented": "Не реализовано",
-    "Not Modified": "Не изменялось",
+    "Not Modified": "Без изменений",
     "of": "из",
     "OK": "ОК",
     "Once your account is deleted, all of its resources and data will be permanently deleted. Before deleting your account, please download any data or information that you wish to retain.": "После удаления Вашей учётной записи все её ресурсы и данные будут удалены без возможности восстановления. Перед удалением учётной записи загрузите данные и информацию, которую хотите сохранить.",
@@ -168,7 +169,7 @@
     "Precondition Required": "Требуется предусловие",
     "Preview": "Предпросмотр",
     "Price": "Цена",
-    "Processing": "Идет обработка",
+    "Processing": "Идёт обработка",
     "Profile": "Профиль",
     "Profile Information": "Информация профиля",
     "Proxy Authentication Required": "Требуется аутентификация прокси",
