--- a/lang/sv.json
+++ b/lang/sv.json
@@ -110,6 +110,7 @@
     "Invalid filename.": "Ogiltigt filnamn.",
     "Invalid JSON was returned from the route.": "Ogiltig JSON returnerades från rutten.",
     "Invalid SSL Certificate": "Ogiltigt SSL-certifikat",
+    "length": "längd",
     "Length Required": "Längd krävs",
     "Like": "Tycka om",
     "Load": "Ladda",
