--- a/lang/ta.json
+++ b/lang/ta.json
@@ -110,6 +110,7 @@
     "Invalid filename.": "தவறான கோப்பு பெயர்.",
     "Invalid JSON was returned from the route.": "தவறான JSON பாதையிலிருந்து திரும்பியது.",
     "Invalid SSL Certificate": "தவறான SSL சான்றிதழ்",
+    "length": "நீளம்",
     "Length Required": "நீளம் தேவை",
     "Like": "பிடிக்கும்",
     "Load": "ஏற்றவும்",
