--- a/lang/ur.json
+++ b/lang/ur.json
@@ -110,6 +110,7 @@
     "Invalid filename.": "غلط فائل نام۔",
     "Invalid JSON was returned from the route.": "غلط JSON راستے سے واپس کر دیا گیا تھا۔",
     "Invalid SSL Certificate": "غلط SSL سرٹیفکیٹ",
+    "length": "لمبائی",
     "Length Required": "لمبائی درکار ہے۔",
     "Like": "پسند",
     "Load": "لوڈ",
