--- a/lang/zh_CN.json
+++ b/lang/zh_CN.json
@@ -110,6 +110,7 @@
     "Invalid filename.": "无效的文件名。",
     "Invalid JSON was returned from the route.": "从路由返回无效的 JSON。",
     "Invalid SSL Certificate": "无效的SSL证书",
+    "length": "长度",
     "Length Required": "长度要求",
     "Like": "喜欢",
     "Load": "加载",
