--- a/lang/sr_Latn.json
+++ b/lang/sr_Latn.json
@@ -4,9 +4,9 @@
     "A decryption key is required.": "POTREBAN JE KLjUČ ZA DEŠIFROVANjE.",
     "A new verification link has been sent to the email address you provided during registration.": "NOVI VERIFIKACIONI LINK JE POSLAT NA VAŠU E-MAIL ADRESU KOJU STE UNELI U TOKU REGISTRACIJE.",
     "A new verification link has been sent to your email address.": "NOVA VEZA ZA VERIFIKACIJU JE POSLATA NA VAŠU ADRESU E-POŠTE.",
-    "A Timeout Occurred": "A Timeout Occurred",
+    "A Timeout Occurred": "Došlo je do isteka vremena",
     "Accept": "Accept",
-    "Accepted": "Accepted",
+    "Accepted": "Prihvaćeno",
     "Action": "AKCIJA",
     "Actions": "AKCIJE",
     "Add": "DODAJ",
@@ -15,15 +15,15 @@
     "Agree": "Agree",
     "All rights reserved.": "SVA PRAVA ZADRŽANA.",
     "Already registered?": "VEĆ STE REGISTROVANI?",
-    "Already Reported": "Already Reported",
+    "Already Reported": "Već prijavljeno",
     "Archive": "Archive",
     "Are you sure you want to delete your account?": "DA LI STE SIGURNI DA ŽELITE DA IZBRIŠETE SVOJ NALOG?",
     "Assign": "Assign",
     "Associate": "Associate",
     "Attach": "PRILOŽITI",
-    "Bad Gateway": "Bad Gateway",
-    "Bad Request": "Bad Request",
-    "Bandwidth Limit Exceeded": "Bandwidth Limit Exceeded",
+    "Bad Gateway": "Greška na gateway-u",
+    "Bad Request": "Neispravan zahtev",
+    "Bandwidth Limit Exceeded": "Dostignut limit propusnosti",
     "Browse": "Browse",
     "Cancel": "OTKAŽI",
     "Choose": "IZABRATI",
@@ -32,21 +32,21 @@
     "Choose Image": "Choose Image",
     "Click here to re-send the verification email.": "KLIKNITE OVDE DA PONOVO POŠALjETE E-PORUKU ZA VERIFIKACIJU.",
     "Click to copy": "Click to copy",
-    "Client Closed Request": "Client Closed Request",
+    "Client Closed Request": "Klijent je zatvorio zahtev",
     "Close": "ZATVORI",
     "Collapse": "Collapse",
     "Collapse All": "Collapse All",
     "Comment": "Comment",
     "Confirm": "POTVRDI",
     "Confirm Password": "POTVRDITE LOZINKU",
-    "Conflict": "Conflict",
+    "Conflict": "Sukob",
     "Connect": "Connect",
-    "Connection Closed Without Response": "Connection Closed Without Response",
-    "Connection Timed Out": "Connection Timed Out",
-    "Continue": "Continue",
+    "Connection Closed Without Response": "Konekcija zatvorena bez odgovora",
+    "Connection Timed Out": "Isteklo vreme konekcije",
+    "Continue": "Nastavi",
     "Create": "KREIRAJ",
     "Create :name": "Create :name",
-    "Created": "Created",
+    "Created": "Kreirano",
     "Current Password": "TRENUTNA LOZINKA",
     "Dashboard": "KONTROLNA TABLA",
     "Delete": "BRISANjE",
@@ -74,76 +74,77 @@
     "errors": "GREŠKE",
     "Expand": "Expand",
     "Expand All": "Expand All",
-    "Expectation Failed": "Expectation Failed",
+    "Expectation Failed": "Očekivanje nije ispunjeno",
     "Explanation": "Explanation",
     "Export": "Export",
     "Export :name": "Export :name",
-    "Failed Dependency": "Failed Dependency",
+    "Failed Dependency": "Neuspešna zavisnost",
     "File": "File",
     "Files": "Files",
     "Forbidden": "ZABRANjENO",
     "Forgot your password?": "ZABORAVILI STE LOZINKU?",
     "Forgot your password? No problem. Just let us know your email address and we will email you a password reset link that will allow you to choose a new one.": "ZABORAVILI STE LOZINKU? NEMA PROBLEMA. SAMO NAM RECITE VAŠU EMAIL ADRESU I MI ĆEMO VAM POSLATI LINK ZA RESET LOZINKE NA VAŠ MEJL KOJI ĆE VAM OMOGUĆITI DA IZABERETE NOVU LOZINKU.",
-    "Found": "Found",
-    "Gateway Timeout": "Gateway Timeout",
+    "Found": "Pronađeno",
+    "Gateway Timeout": "Isteklo vreme gateway-a",
     "Go Home": "IDI NA POČETNU",
     "Go to page :page": "IDITE NA STRANICU :page",
-    "Gone": "Gone",
+    "Gone": "Nije više dostupno",
     "Hello!": "ZDRAVO!",
     "Hide": "Hide",
     "Hide :name": "Hide :name",
     "Home": "Home",
-    "HTTP Version Not Supported": "HTTP Version Not Supported",
-    "I'm a teapot": "I'm a teapot",
+    "HTTP Version Not Supported": "HTTP verzija nije podržana",
+    "I'm a teapot": "Ja sam čajnik",
     "If you did not create an account, no further action is required.": "UKOLIKO NISTE KREIRALI NALOG, NIJE POTREBNO DA PREDUZIMATE DALjE KORAKE.",
     "If you did not request a password reset, no further action is required.": "UKOLIKO NISTE ZAHTEVALI PROMENU LOZINKE, NIJE POTREBNO DA PREDUZIMATE DALjE KORAKE.",
     "If you're having trouble clicking the \":actionText\" button, copy and paste the URL below\ninto your web browser:": "AKO IMATE PROBLEMA PRI KLIKU NA \":actionText\" DUGME, KOPIRAJTE I NALEPITE URL ISPOD\n ILI U VAŠ VEB PRETRAŽIVAČ:",
-    "IM Used": "IM Used",
+    "IM Used": "IM iskorišćen",
     "Image": "Image",
     "Impersonate": "LAŽNO PREDSTAVLjATI",
     "Impersonation": "Impersonation",
     "Import": "Import",
     "Import :name": "Import :name",
-    "Insufficient Storage": "Insufficient Storage",
-    "Internal Server Error": "Internal Server Error",
+    "Insufficient Storage": "Nedovoljno prostora",
+    "Internal Server Error": "Interna greška servera",
     "Introduction": "Introduction",
     "Invalid filename.": "NEISPRAVAN NAZIV DATOTEKE.",
     "Invalid JSON was returned from the route.": "NEVAŽEĆI JSON JE VRAĆEN SA RUTE.",
-    "Invalid SSL Certificate": "Invalid SSL Certificate",
-    "Length Required": "Length Required",
+    "Invalid SSL Certificate": "Nevažeći SSL sertifikat",
+    "length": "DUŽINA",
+    "Length Required": "Potreban je podatak o dužini",
     "Like": "Like",
     "Load": "Load",
     "Localize": "Localize",
     "Location": "LOKACIJA",
-    "Locked": "Locked",
+    "Locked": "Zaključano",
     "Log in": "PRIJAVITE",
     "Log In": "PRIJAVITE SE",
     "Log Out": "ODJAVITE SE",
     "Login": "PRIJAVA",
     "Logout": "ODJAVA",
-    "Loop Detected": "Loop Detected",
-    "Maintenance Mode": "Maintenance Mode",
-    "Method Not Allowed": "Method Not Allowed",
-    "Misdirected Request": "Misdirected Request",
-    "Moved Permanently": "Moved Permanently",
-    "Multi-Status": "Multi-Status",
-    "Multiple Choices": "Multiple Choices",
+    "Loop Detected": "Detektirana petlja",
+    "Maintenance Mode": "Režim održavanja",
+    "Method Not Allowed": "Metoda nije dozvoljena",
+    "Misdirected Request": "Pogrešno usmeren zahtev",
+    "Moved Permanently": "Trajno premešteno",
+    "Multi-Status": "Višestruki status",
+    "Multiple Choices": "Više opcija",
     "Name": "IME",
     "name": "IME",
-    "Network Authentication Required": "Network Authentication Required",
-    "Network Connect Timeout Error": "Network Connect Timeout Error",
-    "Network Read Timeout Error": "Network Read Timeout Error",
+    "Network Authentication Required": "Potrebna je autentifikacija mreže",
+    "Network Connect Timeout Error": "Greška: istek vremena pri povezivanju na mrežu",
+    "Network Read Timeout Error": "Greška: istek vremena pri čitanju sa mreže",
     "New": "NOVO",
     "New :name": "New :name",
     "New Password": "NOVA LOZINKA",
     "No": "NEMA",
-    "No Content": "No Content",
-    "Non-Authoritative Information": "Non-Authoritative Information",
-    "Not Acceptable": "Not Acceptable",
-    "Not Extended": "Not Extended",
+    "No Content": "Bez sadržaja",
+    "Non-Authoritative Information": "Neautorativne informacije",
+    "Not Acceptable": "Nije prihvatljivo",
+    "Not Extended": "Nije prošireno",
     "Not Found": "NIJE PRONAĐENO.",
-    "Not Implemented": "Not Implemented",
-    "Not Modified": "Not Modified",
+    "Not Implemented": "Nije implementirano",
+    "Not Modified": "Nije izmenjeno",
     "of": "OD",
     "OK": "U REDU",
     "Once your account is deleted, all of its resources and data will be permanently deleted. Before deleting your account, please download any data or information that you wish to retain.": "JEDNOM KADA SE VAŠ NALOG IZBRIŠE, SVI NjEGOVI RESURSI I PODACI BIĆE TRAJNO IZBRISANI. PRE BRISANjA NALOGA, PREUZMITE SVE PODATKE ILI INFORMACIJE KOJE ŽELITE DA ZADRŽITE.",
@@ -154,41 +155,41 @@
     "Open in a parent frame": "Open in a parent frame",
     "Open in the topmost frame": "Open in the topmost frame",
     "Open on the website": "Open on the website",
-    "Origin Is Unreachable": "Origin Is Unreachable",
+    "Origin Is Unreachable": "Poreklo je nedostupno",
     "Page Expired": "STRANICA JE ISTEKLA",
     "Pagination Navigation": "NAVIGACIJA PO STRANICAMA",
-    "Partial Content": "Partial Content",
+    "Partial Content": "Delimičan sadržaj",
     "Password": "LOZINKA",
     "password": "Pogrešna lozinka",
-    "Payload Too Large": "Payload Too Large",
+    "Payload Too Large": "Podaci su preveliki",
     "Payment Required": "PLAĆANjE JE OBAVEZNO",
-    "Permanent Redirect": "Permanent Redirect",
+    "Permanent Redirect": "Trajno preusmerenje",
     "Please click the button below to verify your email address.": "MOLIMO KLIKNITE NA DUGME ISPOD DA VERIFIKUJETE VAŠU E-MAIL ADRESU.",
-    "Precondition Failed": "Precondition Failed",
-    "Precondition Required": "Precondition Required",
+    "Precondition Failed": "Preduslov nije ispunjen",
+    "Precondition Required": "Potrebna je provera preduslova",
     "Preview": "PREGLED",
     "Price": "Price",
-    "Processing": "Processing",
+    "Processing": "Obrađuje se",
     "Profile": "PROFIL",
     "Profile Information": "INFORMACIJE O PROFILU",
-    "Proxy Authentication Required": "Proxy Authentication Required",
-    "Railgun Error": "Railgun Error",
-    "Range Not Satisfiable": "Range Not Satisfiable",
+    "Proxy Authentication Required": "Potrebna autentifikacija proxy-ja",
+    "Railgun Error": "Greška Railgun-a",
+    "Range Not Satisfiable": "Opseg nije moguće zadovoljiti",
     "Record": "Record",
     "Regards": "Pozdrav",
     "Regards,": "POZDRAV,",
     "Register": "REGISTRACIJA",
     "Remember me": "ZAPAMTI ME",
-    "Request Header Fields Too Large": "Request Header Fields Too Large",
-    "Request Timeout": "Request Timeout",
+    "Request Header Fields Too Large": "Zaglavlja zahteva su prevelika",
+    "Request Timeout": "Isteklo vreme zahteva",
     "Resend Verification Email": "PONOVO POŠALjI VERIFIKACIONI MEJL",
-    "Reset Content": "Reset Content",
+    "Reset Content": "Resetovanje sadržaja",
     "Reset Password": "RESETUJ LOZINKU",
     "Reset Password Notification": "OBAVEŠTENjE O RESETOVANjU LOZINKE",
     "Restore": "OBNOVI",
     "Restore :name": "Restore :name",
     "results": "REZULTATI",
-    "Retry With": "Retry With",
+    "Retry With": "Pokušajte ponovo sa",
     "Save": "SAČUVAJ",
     "Save & Close": "Save & Close",
     "Save & Return": "Save & Return",
@@ -196,13 +197,13 @@
     "Saved.": "SAČUVANO.",
     "Search": "PRETRAGA",
     "Search :name": "Search :name",
-    "See Other": "See Other",
+    "See Other": "Vidi drugi resurs",
     "Select": "IZABERITE",
     "Select All": "Select All",
     "Send": "Send",
     "Server Error": "SERVERSKA GREŠKA",
     "Service Unavailable": "SERVIS NEDOSTUPAN",
-    "Session Has Expired": "Session Has Expired",
+    "Session Has Expired": "Sesija je istekla",
     "Settings": "Settings",
     "Show": "Show",
     "Show :name": "Show :name",
@@ -210,17 +211,17 @@
     "Showing": "PRIKAZ",
     "Sign In": "Sign In",
     "Solve": "Solve",
-    "SSL Handshake Failed": "SSL Handshake Failed",
+    "SSL Handshake Failed": "SSL rukovanje neuspešno",
     "Start": "Start",
     "Stop": "Stop",
     "Submit": "Submit",
     "Subscribe": "PRETPLATITI SE",
     "Switch": "Switch",
     "Switch To Role": "Switch To Role",
-    "Switching Protocols": "Switching Protocols",
+    "Switching Protocols": "Prebacivanje protokola",
     "Tag": "Tag",
     "Tags": "Tags",
-    "Temporary Redirect": "Temporary Redirect",
+    "Temporary Redirect": "Privremeno preusmerenje",
     "Thanks for signing up! Before getting started, could you verify your email address by clicking on the link we just emailed to you? If you didn't receive the email, we will gladly send you another.": "HVALA ŠTO STE SE PRIJAVILI! PRE NEGO ŠTO ZAPOČNETE, DA LI BISTE MOGLI DA POTVRDITE SVOJU ADRESU E-POŠTE KLIKOM NA VEZU KOJU SMO VAM UPRAVO POSLALI E-POŠTOM? AKO NISTE DOBILI E-POŠTU, RADO ĆEMO VAM POSLATI DRUGU.",
     "The given data was invalid.": "DATI PODACI SU BILI NEVAŽEĆI.",
     "The response is not a streamed response.": "ODGOVOR NIJE STRIMOVANI ODGOVOR.",
@@ -230,31 +231,31 @@
     "This password reset link will expire in :count minutes.": "LINK ZA PROMENU LOZINKE ISTICE ZA :count MINUTA.",
     "to": "K",
     "Toggle navigation": "PRIKAŽI NAVIGACIJU",
-    "Too Early": "Too Early",
+    "Too Early": "Previše rano",
     "Too Many Requests": "PREVIŠE ZAHTEVA",
     "Translate": "Translate",
     "Translate It": "Translate It",
     "Unauthorized": "NEOVLAŠĆEN PRISTUP",
-    "Unavailable For Legal Reasons": "Unavailable For Legal Reasons",
-    "Unknown Error": "Unknown Error",
+    "Unavailable For Legal Reasons": "Nedostupno iz pravnih razloga",
+    "Unknown Error": "Nepoznata greška",
     "Unpack": "Unpack",
-    "Unprocessable Entity": "Unprocessable Entity",
+    "Unprocessable Entity": "Neobradiv entitet",
     "Unsubscribe": "Unsubscribe",
-    "Unsupported Media Type": "Unsupported Media Type",
+    "Unsupported Media Type": "Nepodržan tip sadržaja",
     "Up": "Up",
     "Update": "AŽURIRANjE",
     "Update :name": "Update :name",
     "Update Password": "AŽURIRAJ LOZINKU",
     "Update your account's profile information and email address.": "AŽURIRAJTE INFORMACIJE O PROFILU NALOGA I ADRESU E-POŠTE.",
-    "Upgrade Required": "Upgrade Required",
-    "URI Too Long": "URI Too Long",
-    "Use Proxy": "Use Proxy",
+    "Upgrade Required": "Potrebno ažuriranje",
+    "URI Too Long": "URI je predugačak",
+    "Use Proxy": "Koristite proxy",
     "User": "User",
-    "Variant Also Negotiates": "Variant Also Negotiates",
+    "Variant Also Negotiates": "Varijanta takođe pregovara",
     "Verify Email Address": "VERIFIKUJ EMAIL ADRESU",
     "View": "POGLEDAJTE",
     "View :name": "View :name",
-    "Web Server is Down": "Web Server is Down",
+    "Web Server is Down": "Web server je nedostupan",
     "Whoops!": "UPS!",
     "Yes": "DA",
     "You are receiving this email because we received a password reset request for your account.": "DOBILI STE OVAJ EMAIL ZATO ŠTO SAMO PRIMILI ZAHTEV ZA PROMENU LOZINKE ZA VAŠ NALOG.",
